--- a/src/Test_resume.tex
+++ b/src/Test_resume.tex
@@ -5,80 +5,79 @@
 
 % ----- Name + Contact Information -----
 \resumeheader[
-    firstname=Ram,
-    middleinitial=,
-    lastname=Polisetti,
-    email=rampolisetti@gmail.com,
+    % firstname=Sai Teja,
+    middleinitial=Ram Polisetti,
+    lastname=,
+    email=rampolisettius@gmail.com,
     phone=716-256-7258,
     linkedin=ram-polisetti,
     github=ram-polisetti,
     city=Seattle,
-    state=WA,
-    % qrcode=./images/qr.png,
     fixobjectivespacing=true
 ]
 
-% \objective{A Data Science graduate with 2 years of work
-%     experience at various internships \\ seeking opportunities to develop
-%     web/mobile applications for Company XYZ.}
-
-\objective{
-    Dynamic and results-driven Supplychain Professional with over 2 years of experience in streamlining operations,
-    \\ enhancing productivity, and driving cost efficiencies. Adept at leading cross-functional teams, implementing process
-    \\improvements, and leveraging data-driven strategies to optimize performance. Seeking to bring my expertise in [specific industry or field, if applicable]
-    \\to [Company Name], where I can contribute to operational excellence and support the company's growth objectives.
-}
+\objective{Dynamic and results-driven Operations Manager with over 2 years of experience in software engineering, web/mobile application development, and agile methodologies.}
 
 % ----- Education -----
 \section{Education}
 
 \experience{Master of Science}{Data Science}{Sept 2022}{Jan 2024}{
-    \noindent School of Engineering and Applied Sciences
-    \newline State University of New York, Buffalo, New York \newline
+    \noindent School of Engineeng and Applied Sciences \newline
+    State University of New York (UB), Buffalo, NY
+}
+
+% ------ Skills -----
+\section{Skills}
+\skills{Python, R, SQL, Tableau, Amazon Redshift, Amazon Quicksight,
+    Machine Learning, Data Analysis \& Visualization, Operations Management,
+    Inventory Management, Supply Chain Optimization, Logistics Management,
+    KPI Tracking, Root Cause Analysis, Team Leadership
 }
 
 % ----- Work Experience -----
 \section{Work Experience}
 
-\experience{Data Analyst}{Jersey Stem}{Mar 2024}{Present}{
-    \achievement{
+\experience{JerseyStem, New Jersey}{Data Analyst}{Mar 2024}{Present}{
+    \achievement{Spearheaded the creation of advanced automated data pipelines using \tech{SQL}, \tech{Python}, and \tech{Alteryx}, significantly enhancing data collection and analysis to inform decision-making and improve program effectiveness.}
+    \achievement{Orchestrated \tech{Postman} and \tech{Webhooks} for real-time data integration and automation, optimizing data workflows and ensuring organizational agility and responsiveness to evolving data trends and needs.}
+    \achievement{Launched a daily reporting system using \tech{AppSheet}, \tech{Tableau}, and \tech{Google Data Studio}, providing actionable insights and enhancing organizational accountability and project deliverables through superior data visualization.}
 
-        Developed a mobile app in \tech{React Native} that was
-        downloaded 100k times on Google Play.
+}
 
-    }
-    \achievement{
+\experience{Amazon Inc., Hyderabad, India}{Transportation Specialist}{Nov 2020}{Jul 2022}{
+    \achievement{Executed data-driven optimizations of dispatch systems using advanced \tech{SQL} queries to extract data from \tech{Amazon Redshift}, resulting in a 40\% increase in efficiency and a 15\% decrease in carrier-related fraud.}
+    \achievement{Led a data analysis project to strategically reduce equipment dwell times, reintegrating over 1,000 equipment and improving logistics and supply chain efficiency.}
+    \achievement{Spearheaded comprehensive transportation data analysis to enhance route efficiency, cutting down empty miles by 8\% and reducing logistical costs through \tech{SQL} and data visualization tools.}
+    \achievement{Monitored and analyzed logistics performance metrics using \tech{Amazon Quicksight}, achieving a 20\% reduction in operational incidents and improving delivery timelines.}
+    \achievement{Developed Standard Operating Procedures (SOPs) and automated transportation operations, leading to a 30\% reduction in team acclimatization time and improvements in overall team efficiency.}
+    \achievement{Directed and mentored a team of 5 at Amazon, earning recognition as a Subject Matter Expert in logistics data analysis and receiving the "Amazon Leadership Principle Award" for initiative in dispatch systems.}
 
-        Collaborated in an \tech{Agile/Scrum} team of 8 engineers to
-        deliver new features every 2 weeks.
-
-    }
 }
 
 % ----- Technical Projects -----
+
 \section{Technical Projects}
 
-\experience{Route Optimization and Cost Minimization}{Personal Project}{
-    \achievement{
-
-        Created a \tech{\LaTeX} class that makes it easy for anyone to
-        quickly create a beautiful resume and cover letter.
-
-    }
-    \achievement{
-        Engineered a network optimization strategy using NetworkX, delineating 30 critical plant-port connections, thereby enhancing logistical
-efficiency and reducing route costs.
-
-    }
-    \achievement{
-        Created a constraint-based allocation model for 50+ products and 30 customers, achieving a 100% adherence to Vendor Managed Inventory
-(VMI) protocols and minimizing supply discrepancies.
-
-    }
-    \achievement{
-        Enhanced decision-making processes by developing interactive dashboards with Plotly, providing stakeholders with clear insights for
-strategic supply chain decision-making.
-    }
+\project{SQL, Python, Tableau, Redshift, Quicksight}{Advanced Supply Chain Freight Analytics Dashboard}{}{}{
+    \achievement{Developed a dashboard providing real-time insights into transportation and supply chain operations, using \tech{SQL}, \tech{Python}, and \tech{Tableau}.}
+    \achievement{Conducted in-depth transportation data analysis, identifying key trends and patterns to optimize route efficiency and carrier performance.}
+    \achievement{Established and monitored KPIs to measure transportation performance, contributing to improvement in delivery times and cost savings.}
+    \achievement{Performed root cause analysis to address transportation inefficiencies, leading to a 15\% reduction in logistical bottlenecks.}
+    \achievement{Effectively communicated complex data insights to stakeholders through regular reports and presentations, enhancing decision-making processes.}
 }
+
+\project{Python, Plotly, SQL, Monte Carlo Simulation}{Strategic Route Optimization and Cost Minimization}{}{}{
+    \achievement{Engineered a network optimization strategy using \tech{NetworkX}, delineating 30 critical plant-port connections, thereby enhancing logistical efficiency and reducing route costs.}
+    \achievement{Created a constraint-based allocation model for 50+ products and 30 customers, achieving a 100\% adherence to Vendor Managed Inventory (VMI) protocols and minimizing supply discrepancies.}
+    \achievement{Improved decision-making processes by developing interactive dashboards with \tech{Plotly}, providing stakeholders with clear insights for strategic supply chain decision-making.}
+}
+
+% \project{Python, SQL, KPI Identification}{Supply Chain Optimization through Data Analytics}{}{}{
+%     \achievement{Led analysis of supply chain data, extracting key metrics to refine inventory management and inform data-centric marketing strategies.}
+%     \achievement{Analyzed supplier performance to address inefficiencies, implementing solutions that bolstered supply chain resilience and led to a measurable decrease in defect rates.}
+%     \achievement{Employed sophisticated data visualization methodologies to uncover and act upon trends within customer demographics and pricing strategies, driving improvements in logistical operations, and influencing cost-saving measures.}
+% }
+
+
 
 \end{document}
