--- a/src/Test_resume.tex
+++ b/src/Test_resume.tex
@@ -7,7 +7,7 @@
 \resumeheader[
     % firstname=Sai Teja,
     middleinitial=Ram Polisetti,
-    lastname=,
+    % lastname=Ram Polisetti,
     email=rampolisettius@gmail.com,
     phone=716-256-7258,
     linkedin=ram-polisetti,
