--- a/src/transunion.tex
+++ b/src/transunion.tex
@@ -16,7 +16,25 @@
     fixobjectivespacing=true
 ]
 
-\objective{Dynamic and results-driven Operations Manager with over 2 years of experience in software engineering, web/mobile application development, and agile methodologies.}
+\objective{Highly motivated and detail-oriented  \tech{Data Analyst} with
+    experience driving business growth
+    and improvement through data-driven insights. Skilled in \tech{Data Analysis},
+    \tech{Machine Learning}, and \tech{Data Visualization}, with a strong background in
+    \tech{Operations Optimization}.
+    Proven skills in \tech{generating actionable reports} and
+    \tech{dashboards},
+    and effectively \tech{communicating data insights to stakeholders}.
+}
+
+% {
+%     Highly motivated and detail-oriented data analyst with
+%     experience in driving business growth and improvement through data-driven insights.
+%     Proven track record of analyzing complex data systems and processes to
+%     identify opportunities for cost savings and efficiency improvements.
+%     Skilled in data analysis, machine learning, and data visualization, with
+%     a strong background in operations optimization and business processes. Possesses excellent communication and problem-solving
+%     skills, with the ability to work effectively in fast-paced environments.
+% }
 
 % ----- Education -----
 \section{Education}
@@ -27,11 +45,10 @@
 
 % ------ Skills -----
 \section{Skills}
-\skills{
-    Machine Learning, Deep Learning, Natural Language Processing,
+\skills{Machine Learning, Deep Learning, Natural Language Processing,
     Predictive Modeling, Data Mining, Statistical Analysis, Data
     Visualization, Python, R, SQL, TensorFlow, PyTorch, Scikit-learn,
-    Keras, Tableau, Power BI, AWS, Azure, Big Data, Hadoop, Spark,
+    Keras, Tableau, Power BI, AWS, Azure, Big Data, Spark,
     Data Wrangling, Data Preprocessing, Feature Engineering, Model
     Evaluation, Model Deployment
 }
@@ -40,40 +57,47 @@
 \section{Work Experience}
 
 \experience{JerseyStem, New Jersey}{Data Analyst}{Mar 2024}{Present}{
-    \achievement{Spearheaded the optimization of data processing workflows, resulting in a 25\% reduction in data processing time and a 15\% increase in data quality, saving the company \$30,000 annually.}
-    \achievement{Facilitated the development of data visualizations to communicate insights to stakeholders, achieving a 90\% adoption rate among business users and a 20\% increase in data-driven decision-making, leading to a 12\% increase in sales revenue.}
+    \achievement{Spearheaded the optimization of data processing workflows, resulting in a \textbf{25\% reduction} in data processing time and a \textbf{15\% increase} in data quality, saving the company \textbf{\$30,000 annually}. Utilized \tech{Python}, \tech{SQL}, and \tech{Tableau} to drive insights and inform business decisions.}
+    \achievement{Facilitated the development of data visualizations to communicate insights to stakeholders, achieving a \textbf{90\% adoption rate} among business users and a \textbf{20\% increase} in data-driven decision-making.}
 }
 
 \experience{Amazon Inc., Hyderabad, India}{Transportation Specialist}{Nov 2020}{Jul 2022}{
-    \achievement{Streamlined transportation operations by identifying and eliminating inefficiencies, resulting in a 15\% reduction in transportation costs and a 10\% increase in on-time delivery rates, saving the company \$150,000 annually.}
-    \achievement{Collaborated with transportation teams to design and implement process improvements, achieving a 20\% reduction in transit times and a 15\% increase in route optimization, leading to a 10\% reduction in fuel consumption.}
-    \achievement{Negotiated with transportation providers to secure better rates and service levels, resulting in a 12\% reduction in costs and a 10\% increase in capacity utilization, saving the company \$100,000 annually.}
-    \achievement{Orchestrated the implementation of transportation management systems and tools, achieving a 25\% reduction in manual errors and a 15\% increase in productivity, leading to a 10\% reduction in operational costs.}
+    \achievement{Streamlined transportation operations by identifying and eliminating inefficiencies, resulting in a \textbf{15\% decrease} in transportation costs and a \textbf{10\% improvement} in on-time delivery rates, saving the company \textbf{\$150,000 annually}. Utilized \tech{Excel}, \tech{SQL}, and \tech{Quicksight} to analyze and optimize transportation data.}
+    \achievement{Collaborated with transportation teams to design and implement process improvements, increasing route optimization by \textbf{15\%} and reducing fuel consumption by \textbf{10\%}.}
+    \achievement{Negotiated with transportation providers to secure better rates and service levels, resulting in a \textbf{12\% cost savings} and a \textbf{10\% increase} in capacity utilization, saving the company \textbf{\$100,000 annually}.}
+    \achievement{Orchestrated the implementation of transportation management systems and tools, improving productivity by \textbf{15\%} and reducing manual errors by \textbf{25\%}, leading to a \textbf{10\% reduction} in operational costs.}
 }
 
 \experience{National Instruments}{Analyst Intern}{Nov 2018}{Feb 2020}{
-    \achievement{Built and deployed predictive models using statistical and machine learning techniques, achieving a 90\% accuracy rate in forecasting product demand and a 15\% reduction in inventory costs, saving the company \$50,000 annually.}
-    \achievement{Investigated manufacturing data to identify opportunities for process improvements and cost savings, resulting in a 10\% reduction in production costs and a 5\% increase in product quality, leading to a 5\% increase in sales revenue.}
-    \achievement{Enhanced dashboards and reports to track key performance indicators (KPIs) and metrics, achieving a 95\% completion rate for reports and a 10\% increase in data-driven decision-making, leading to a 5\% increase in sales revenue.}
+    \achievement{Built and deployed predictive models using statistical and machine learning techniques, achieving a \textbf{90\% accuracy rate} in forecasting product demand and a \textbf{15\% reduction} in inventory costs. Utilized \tech{Python}, and \tech{SQL} to develop and deploy predictive models.}
+    \achievement{Investigated manufacturing data to identify opportunities for process improvements and cost savings, resulting in a \textbf{10\% reduction} in production costs and a \textbf{5\% increase} in product quality.}
+    \achievement{Enhanced dashboards and reports to track key performance indicators (KPIs) and metrics, achieving a \textbf{95\% completion rate} for reports and a \textbf{10\% increase} in data-driven decision-making.}
 }
+
+
 
 % ----- Technical Projects -----
 
 \section{Technical Projects}
 
-\project{SQL, Python, Tableau, Redshift, Quicksight}{Advanced Supply Chain Freight Analytics Dashboard}{}{}{
-    \achievement{Developed a dashboard providing real-time insights into transportation and supply chain operations, using \tech{SQL}, \tech{Python}, and \tech{Tableau}.}
-    \achievement{Conducted in-depth transportation data analysis, identifying key trends and patterns to optimize route efficiency and carrier performance.}
-    \achievement{Established and monitored KPIs to measure transportation performance, contributing to improvement in delivery times and cost savings.}
-    \achievement{Performed root cause analysis to address transportation inefficiencies, leading to a 15\% reduction in logistical bottlenecks.}
-    \achievement{Effectively communicated complex data insights to stakeholders through regular reports and presentations, enhancing decision-making processes.}
+\project{Machine Learning, Ensemble Methods, Deep Learning, Apache Spark, AWS}{Fraud Detection System}{}{}{
+    \achievement{Developed and deployed an advanced fraud detection system utilizing \textbf{ensemble methods}, achieving \textbf{92\% accuracy} on test data and demonstrating practical experience in cloud-based machine learning operations.}
+    \achievement{Designed and implemented robust data pipelines using \tech{Apache Spark} to efficiently process and analyze datasets, enabling scalable and reliable data processing.}
+    \achievement{Applied \textbf{end-to-end machine learning workflow}, from data preprocessing to model evaluation and deployment, ensuring a comprehensive and structured approach to machine learning operations.}
 }
 
-\project{Python, Plotly, SQL, Monte Carlo Simulation}{Strategic Route Optimization and Cost Minimization}{}{}{
-    \achievement{Engineered a network optimization strategy using \tech{NetworkX}, delineating 30 critical plant-port connections, thereby enhancing logistical efficiency and reducing route costs.}
-    \achievement{Created a constraint-based allocation model for 50+ products and 30 customers, achieving a 100\% adherence to Vendor Managed Inventory (VMI) protocols and minimizing supply discrepancies.}
-    \achievement{Improved decision-making processes by developing interactive dashboards with \tech{Plotly}, providing stakeholders with clear insights for strategic supply chain decision-making.}
+\experience{E-Commerce Sales Data Pipeline}{Data Engineer}{}{}{
+    \achievement{Captained the design and implementation of a comprehensive data pipeline for automating the ingestion, processing, and storage of e-commerce sales data across multiple sources, utilizing \tech{Python}, \tech{Apache Spark}, \tech{PostgreSQL}, and \tech{Tableau}.}
+    \achievement{Leveraged \tech{Apache Spark} for high-efficiency data processing, achieving a 20\% improvement in processing speed, and developed a sophisticated \tech{PostgreSQL} database schema for optimal data storage and retrieval.}
+    \achievement{Utilized \tech{Tableau} to create dynamic, interactive dashboards providing deep insights into sales trends, customer behavior, and inventory management.}
 }
+
+
+% \project{Python, Plotly, SQL, Monte Carlo Simulation}{Strategic Route Optimization and Cost Minimization}{}{}{
+%     \achievement{Engineered a network optimization strategy using \tech{NetworkX}, delineating 30 critical plant-port connections, thereby enhancing logistical efficiency and reducing route costs.}
+%     \achievement{Created a constraint-based allocation model for 50+ products and 30 customers, achieving a 100\% adherence to Vendor Managed Inventory (VMI) protocols and minimizing supply discrepancies.}
+%     \achievement{Improved decision-making processes by developing interactive dashboards with \tech{Plotly}, providing stakeholders with clear insights for strategic supply chain decision-making.}
+% }
 
 % \project{Python, SQL, KPI Identification}{Supply Chain Optimization through Data Analytics}{}{}{
 %     \achievement{Led analysis of supply chain data, extracting key metrics to refine inventory management and inform data-centric marketing strategies.}
