--- a/src/ExpressiveCoverLetter.cls
+++ b/src/ExpressiveCoverLetter.cls
@@ -14,61 +14,61 @@
 
 %% Define page layout
 \RequirePackage[margin=1in]{geometry}
-    \pagestyle{empty}
-    \setlength{\parindent}{0pt}
-    \setlength{\parskip}{\baselineskip}
+\pagestyle{empty}
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{\baselineskip}
 
 %% ----- Custom Commands -----
 % Header Block
 \newkeycommand{\coverletterheader}[
-        firstname,middleinitial,lastname,
-        email,
-        phone,  % Must be in XXX-XXX-XXXX format to become a valid link
-        linkedin,
-        github,
-        city,  % Ignored if `state` is not also provided
-        state,
-        % qrcode,  % Path to an image of a 1000x1000px QR Code
-        % fixobjectivespacing  % Fixes issues with vertical spacing when using QR Code + Objective statement.
-        ]{
+    firstname,middleinitial,lastname,
+    email,
+    phone,  % Must be in XXX-XXX-XXXX format to become a valid link
+    linkedin,
+    github,
+    city,  % Ignored if `state` is not also provided
+    state,
+    % qrcode,  % Path to an image of a 1000x1000px QR Code
+    % fixobjectivespacing  % Fixes issues with vertical spacing when using QR Code + Objective statement.
+]{
     \begin{Center}
-        \nametitle{\commandkey{firstname}}{\ifcommandkey{middleinitial}{\commandkey{middleinitial}. }{}\commandkey{lastname}}
+        \nametitle{\commandkey{firstname}}{\ifcommandkey{middleinitial}{\commandkey{middleinitial} }{}\commandkey{lastname}}
         \rule{\linewidth}{1pt}
 
         {%
             \ifcommandkey{email}%
-                {%
-                    \email{\commandkey{email}}%
-                    \ifcommandkey{phone}{\contactseparator}%
-                        {\ifcommandkey{linkedin}{\contactseparator}%
-                            {\ifcommandkey{github}{\contactseparator}%
-                                {\ifcommandkey{state}{\contactseparator}{}}}}%
-                }%
-                {}%
+            {%
+                \email{\commandkey{email}}%
+                \ifcommandkey{phone}{\contactseparator}%
+                {\ifcommandkey{linkedin}{\contactseparator}%
+                    {\ifcommandkey{github}{\contactseparator}%
+                        {\ifcommandkey{state}{\contactseparator}{}}}}%
+            }%
+            {}%
             \ifcommandkey{phone}%
-                {%
-                    \phone{\commandkey{phone}}%
-                    \ifcommandkey{linkedin}{\contactseparator}%
-                        {\ifcommandkey{github}{\contactseparator}%
-                            {\ifcommandkey{state}{\contactseparator}{}}}%
-                }%
-                {}%
+            {%
+                \phone{\commandkey{phone}}%
+                \ifcommandkey{linkedin}{\contactseparator}%
+                {\ifcommandkey{github}{\contactseparator}%
+                    {\ifcommandkey{state}{\contactseparator}{}}}%
+            }%
+            {}%
             \ifcommandkey{linkedin}%
-                {%
-                    \linkedin{\commandkey{linkedin}}%
-                    \ifcommandkey{github}{\contactseparator}%
-                        {\ifcommandkey{state}{\contactseparator}{}}%
-                }%
-                {}%
+            {%
+                \linkedin{\commandkey{linkedin}}%
+                \ifcommandkey{github}{\contactseparator}%
+                {\ifcommandkey{state}{\contactseparator}{}}%
+            }%
+            {}%
             \ifcommandkey{github}%
-                {%
-                    \github{\commandkey{github}}%
-                    \ifcommandkey{state}{\contactseparator}{}%
-                }%
-                {}%
+            {%
+                \github{\commandkey{github}}%
+                \ifcommandkey{state}{\contactseparator}{}%
+            }%
+            {}%
             \ifcommandkey{state}%
-                {\location{\ifcommandkey{city}{\commandkey{city}, }{}\commandkey{state}}}%
-                {}%
+            {\location{\ifcommandkey{city}{\commandkey{city}, }{}\commandkey{state}}}%
+            {}%
         }
     \end{Center}
 
