--- a/src/coverletter.tex
+++ b/src/coverletter.tex
@@ -3,15 +3,15 @@
 \begin{document}
 
 \coverletterheader[
-    firstname=John,
-    middleinitial=N,
-    lastname=Doe,
-    email=john.doe@example.com,
-    phone=123-456-7890,
-    linkedin=johndoe,
-    % github=johndoe,
-    city=Town,
-    state=State
+    % firstname=Ram,
+    middleinitial=Ram Polisetti,
+    % lastname=Polisetti,
+    email=rampolisettius@gmail.com,
+    phone=716-256-7258,
+    linkedin=ram-polisetti,
+    % github=ram-polisetti,
+    % city=Seattle,
+    state=WA
 ]
 
 \vspace{0.25in}
@@ -19,42 +19,39 @@
 \vspace{0.15in}
 
 
-To whom it may concern:
+I am excited to apply for the Data Engineer position at Infosys. With a
+strong background in data engineering and a passion for designing and
+building large-scale data systems, I am confident that I would be a
+great fit for this role.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Urna duis convallis
-convallis tellus id interdum velit laoreet. Porta lorem mollis aliquam
-ut. Auctor augue mauris augue neque gravida in fermentum. Nulla posuere
-sollicitudin aliquam ultrices. Ultrices dui sapien eget mi proin sed.
-Lorem donec massa sapien faucibus et. Non quam lacus suspendisse
-faucibus interdum posuere lorem ipsum dolor. Odio ut sem nulla pharetra
-diam sit amet. Sapien faucibus et molestie ac feugiat sed lectus. A
-diam maecenas sed enim ut. Luctus accumsan tortor posuere ac ut
-consequat. Varius duis at consectetur lorem donec massa sapien
-faucibus. Neque ornare aenean euismod elementum nisi quis eleifend quam
-adipiscing.
+As a data engineer with 3 years of experience, I have developed a strong
+expertise in data pipeline development, data processing, and data
+storage solutions. I have worked with a range of technologies, including
+Apache Spark, Hadoop, NoSQL databases, and cloud computing platforms. My
+experience in database development, Big Data development, and ETL
+activities has equipped me with the skills to design and implement
+efficient data flow pipelines and prepare databases for visualization
+and analytics.
 
-Faucibus purus in massa tempor nec feugiat nisl pretium fusce. Faucibus
-vitae aliquet nec ullamcorper sit. Quam nulla porttitor massa id neque
-aliquam vestibulum morbi blandit. Urna duis convallis convallis tellus.
-Sem et tortor consequat id porta nibh venenatis cras sed. Magna sit
-amet purus gravida quis. Ut pharetra sit amet aliquam. Justo nec
-ultrices dui sapien eget mi proin sed. Lectus proin nibh nisl
-condimentum id venenatis a. Cum sociis natoque penatibus et magnis dis.
-Ligula ullamcorper malesuada proin libero nunc consequat interdum
-varius sit. Dictum sit amet justo donec.
+I am particularly drawn to this role at Infosys because of the
+opportunity to work on analytics projects and paid POVs for Infosys BPO
+analytics. I am excited about the prospect of working with a talented
+team to drive business growth and improvement through data-driven
+insights.
 
-Thank you for taking the time to review my application. I look forward
-to hopefully meeting with you in the future to further discuss my
-qualifications for a position as a [POSITION NAME] at [COMPANY NAME]
-this upcoming summer. If you have any questions, please feel free to
-email me at \href{mailto:john.doe@example.com}{john.doe@example.com} or
-call me at \href{tel:+1-123-456-7890}{123-456-7890}.
+In addition to my technical skills, I possess excellent communication
+and analytics skills, which have been essential in my previous roles. I
+am a team player and have a proven ability to work effectively in
+fast-paced environments.
+
+Thank you for considering my application. I would be thrilled to discuss
+this opportunity further and explain in greater detail why I am the
+ideal candidate for this role.
 
 Sincerely,
 
 \vspace{.15in}
 
-John Doe
+Ram Polisetti
 
 \end{document}
