--- a/src/transunion.tex
+++ b/src/transunion.tex
@@ -57,23 +57,20 @@
 \section{Work Experience}
 
 \experience{JerseyStem, New Jersey}{Data Analyst}{Mar 2024}{Present}{
-    \achievement{Spearheaded the optimization of data processing workflows, resulting in a \textbf{25\% reduction} in data processing time and a \textbf{15\% increase} in data quality, saving the company \textbf{\$30,000 annually}. Utilized \tech{Python}, \tech{SQL}, and \tech{Tableau} to drive insights and inform business decisions.}
-    \achievement{Facilitated the development of data visualizations to communicate insights to stakeholders, achieving a \textbf{90\% adoption rate} among business users and a \textbf{20\% increase} in data-driven decision-making.}
+    \achievement{Optimized data processing workflows, resulting in a \textbf{25\% reduction} in data processing time and a \textbf{15\% increase} in data quality, saving the company \textbf{\$30,000 annually}. Used \tech{Python}, \tech{SQL}, and \tech{Tableau} to drive insights and inform business decisions.}
+    \achievement{Developed data visualizations to communicate insights to stakeholders, achieving a \textbf{90\% adoption rate} among business users and a \textbf{20\% increase} in data-driven decision-making.}
 }
-
 \experience{Amazon Inc., Hyderabad, India}{Transportation Specialist}{Nov 2020}{Jul 2022}{
-    \achievement{Streamlined transportation operations by identifying and eliminating inefficiencies, resulting in a \textbf{15\% decrease} in transportation costs and a \textbf{10\% improvement} in on-time delivery rates, saving the company \textbf{\$150,000 annually}. Utilized \tech{Excel}, \tech{SQL}, and \tech{Quicksight} to analyze and optimize transportation data.}
-    \achievement{Collaborated with transportation teams to design and implement process improvements, increasing route optimization by \textbf{15\%} and reducing fuel consumption by \textbf{10\%}.}
-    \achievement{Negotiated with transportation providers to secure better rates and service levels, resulting in a \textbf{12\% cost savings} and a \textbf{10\% increase} in capacity utilization, saving the company \textbf{\$100,000 annually}.}
-    \achievement{Orchestrated the implementation of transportation management systems and tools, improving productivity by \textbf{15\%} and reducing manual errors by \textbf{25\%}, leading to a \textbf{10\% reduction} in operational costs.}
+    \achievement{Improved transportation operations, resulting in a \textbf{15\% decrease} in transportation costs and a \textbf{10\% improvement} in on-time delivery rates, saving the company \textbf{\$150,000 annually}. Analyzed and optimized transportation data using \tech{Excel}, \tech{SQL}, and \tech{Quicksight}.}
+    \achievement{Increased route optimization by \textbf{15\%} and reduced fuel consumption by \textbf{10\%}.}
+    \achievement{Secured better rates and service levels with transportation providers, resulting in a \textbf{12\% cost savings} and a \textbf{10\% increase} in capacity utilization, saving the company \textbf{\$100,000 annually}.}
+    \achievement{Improved productivity by \textbf{15\%} and reduced manual errors by \textbf{25\%}, leading to a \textbf{10\% reduction} in operational costs.}
 }
-
 \experience{National Instruments}{Analyst Intern}{Nov 2018}{Feb 2020}{
-    \achievement{Built and deployed predictive models using statistical and machine learning techniques, achieving a \textbf{90\% accuracy rate} in forecasting product demand and a \textbf{15\% reduction} in inventory costs. Utilized \tech{Python}, and \tech{SQL} to develop and deploy predictive models.}
-    \achievement{Investigated manufacturing data to identify opportunities for process improvements and cost savings, resulting in a \textbf{10\% reduction} in production costs and a \textbf{5\% increase} in product quality.}
-    \achievement{Enhanced dashboards and reports to track key performance indicators (KPIs) and metrics, achieving a \textbf{95\% completion rate} for reports and a \textbf{10\% increase} in data-driven decision-making.}
+    \achievement{Built predictive models using statistical and machine learning techniques, achieving a \textbf{90\% accuracy rate} in forecasting product demand and a \textbf{15\% reduction} in inventory costs. Developed and deployed predictive models using \tech{Python} and \tech{SQL}.}
+    \achievement{Identified opportunities for process improvements and cost savings, resulting in a \textbf{10\% reduction} in production costs and a \textbf{5\% increase} in product quality.}
+    \achievement{Enhanced dashboards and reports to track key performance indicators (KPIs) and metrics, achieving a \textbf{95\% completion rate} for reports.}
 }
-
 
 
 % ----- Technical Projects -----
@@ -86,10 +83,10 @@
     \achievement{Applied \textbf{end-to-end machine learning workflow}, from data preprocessing to model evaluation and deployment, ensuring a comprehensive and structured approach to machine learning operations.}
 }
 
-\experience{E-Commerce Sales Data Pipeline}{Data Engineer}{}{}{
+\project{E-Commerce Sales Data Pipeline}{Data Engineer}{}{}{
     \achievement{Captained the design and implementation of a comprehensive data pipeline for automating the ingestion, processing, and storage of e-commerce sales data across multiple sources, utilizing \tech{Python}, \tech{Apache Spark}, \tech{PostgreSQL}, and \tech{Tableau}.}
     \achievement{Leveraged \tech{Apache Spark} for high-efficiency data processing, achieving a 20\% improvement in processing speed, and developed a sophisticated \tech{PostgreSQL} database schema for optimal data storage and retrieval.}
-    \achievement{Utilized \tech{Tableau} to create dynamic, interactive dashboards providing deep insights into sales trends, customer behavior, and inventory management.}
+    \achievement{Harnessed \tech{Tableau} to create dynamic, interactive dashboards providing deep insights into sales trends, customer behavior, and inventory management.}
 }
 
 
@@ -105,6 +102,7 @@
 %     \achievement{Employed sophisticated data visualization methodologies to uncover and act upon trends within customer demographics and pricing strategies, driving improvements in logistical operations, and influencing cost-saving measures.}
 % }
 
-
+\section{Certification}
+\project{Microsoft} {Career Essentials in Data Analysis}{}{}
 
 \end{document}
